--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,8 +11,8 @@
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^12.0.0",
     "@types/qs": "^6.9.7",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
     "@types/react-paginate": "^7.1.1",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.17",
@@ -21,10 +22,10 @@
     "msw": "^0.33.2",
     "node-sass": "4.14.1",
     "qs": "^6.10.1",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-content-loader": "^6.0.3",
     "react-currency-input-field": "^3.4.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.10.1",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
